Now the stats and about pages can be overriden from templates project directory. Added and installation guide document.

--- a/runningteam/apps/team/templates/team/stats.html
+++ b/runningteam/apps/team/templates/team/stats.html
@@ -4,6 +4,6 @@
 
 {% block content %}
 
-{% include "team/includes/stats.html" %}
+Override this template from the project/templates directory.
 
 {% endblock %}
