Added the license and readme files.

--- a/runningteam/apps/team/templates/team/base.html
+++ b/runningteam/apps/team/templates/team/base.html
@@ -47,7 +47,7 @@
     {% endblock %}
     
     <div id="footer">
-        © 2008-2012 by <a href="http://www.paolocorti.net">Capooti</a>, powered by RunningTeam, released under the <a href="http://www.gnu.org/licenses/old-licenses/gpl-2.0.html">GPL License</a>.
+        © 2008-2012 by <a href="http://www.paolocorti.net">Capooti</a>, powered by <a href="https://github.com/capooti/RunningTeam">RunningTeam</a>.
     </div>
 
     </body>
