Some code cleanup.

--- a/runningteam/apps/team/templates/team/race/details.html
+++ b/runningteam/apps/team/templates/team/race/details.html
@@ -67,7 +67,7 @@
         
           {% else %}
 	          <td>{{ rr.ranking }}</td>
-	          <td>{{ rr.time }}</td>
+	          <td>{{ rr.time|time:"H:i:s" }}</td>
 	        {% endif %}
 	      </tr>
 	    {% endfor %}
