--- a/runningteam/apps/team/templates/team/auth/password_change.html
+++ b/runningteam/apps/team/templates/team/auth/password_change.html
@@ -1,14 +1,15 @@
 {% extends "team/base.html" %}
+{% load i18n %}
 
-{% block title %}Cambio Password{% endblock %}
+{% block title %}{% trans "Password Change" %}{% endblock %}
 
 {% block content %}
 
-  <h2>Cambio password</h2>
+  <h2>{% trans "Password Change" %}</h2>
   
   <form action="." method="POST">
     {{ form.as_p }}
-    <input type="submit" value="Conferma" />
+    <input type="submit" value="{% trans "Confirm" %}" />
   </form>
 
 {% endblock %}
