--- a/runningteam/apps/team/templates/team/auth/login.html
+++ b/runningteam/apps/team/templates/team/auth/login.html
@@ -1,4 +1,5 @@
 {% extends "team/base.html" %}
+{% load i18n %}
 {% load url from future %}
 
 {% block content %}
@@ -6,7 +7,7 @@
 <h2>Login</h2>
 
 {% if form.errors %}
-<p>Il tuo username e la tua password sono errati, riprova.</p>
+<p>{% trans "Your username and/or your password are wrong, please retry." %}</p>
 {% endif %}
 
 <form method="post" action="{% url 'django.contrib.auth.views.login' %}">
