--- a/runningteam/apps/team/templates/team/base.html
+++ b/runningteam/apps/team/templates/team/base.html
@@ -28,16 +28,22 @@
                     <li><a href="{% url race-archive %}">{% trans "Races Archives" %}</a></li>
                     <li><a href="{% url future-races %}">{% trans "Future Races" %}</a></li>
                     <li><a href="{% url photos %}">{% trans "Photos" %}</a></li>
-                    {% if user.is_authenticated %}
-                    <li><a href="{% url runner-update %}">{% trans "Profile" %}</a></li>
-                    <li><a href="{% url admin:index %}">{% trans "Admin" %}</a></li>
-                    <li><a href="{% url logout %}">{% trans "Logout" %}</a></li>
-                    {% endif %}
-                    {% if not user.is_authenticated %}
-                    <li><a href="{% url login %}">{% trans "Login" %}</a></li>
-                    {% endif %}
                 </ul>
         </div></div>
+        
+        <div id="tabhead">
+            <div class="login">
+                {% if user.is_authenticated %}
+                    <a href="{% url runner-update %}">{% trans "Profile" %}</a> |
+                    <a href="{% url admin:index %}">{% trans "Admin" %}</a> |
+                    <a href="{% url logout %}">{% trans "Logout" %}</a>
+                {% endif %}
+                {% if not user.is_authenticated %}
+                    <a href="{% url login %}">{% trans "Login" %}</a>
+                {% endif %}
+            </div>
+        </div>    
+        
         {% endblock %}
 
         {% block content %}
