--- a/runningteam/settings.py.tmpl
+++ b/runningteam/settings.py.tmpl
@@ -132,6 +132,7 @@ INSTALLED_APPS = (
     'django.contrib.admin',
     'django.contrib.humanize',
     # others
+    'south',
     'uni_form',
     'groups',
     'pagination',
