--- a/runningteam/apps/team/templates/team/runner/index.html
+++ b/runningteam/apps/team/templates/team/runner/index.html
@@ -20,6 +20,7 @@
                     <th></th>
                     <th>{% trans "Name" %}</th>
                     <th>{% trans "Nickname" %}</th>
+                    <th>{% trans "Total Races" %}</th>
                     <th>{% trans "Birthdate" %}</th>
                     {% if user.is_authenticated %}
                         <th>Email (*)</th>
@@ -31,6 +32,7 @@
                     <td><div class="avatar">{% avatar runner.user 30 %}</div></td>
                     <td><a href="{% url runner-details runner.id %}">{{ runner.name }}</a></td>
                     <td>{{ runner.nickname }}</a></td>
+                    <td>{{ runner.racerunner_set.all.count }}</a></td>
                     <td>{{ runner.birthdate|date:"d-M-Y" }}</td>
                     {% if user.is_authenticated %}
                         <td>{{ runner.email }}</a></td>
